<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ergasia</string>
    <string name="action_logout">Se déconnecter</string>
    <string name="action_add">Ajouter offre</string>
    <string name="action_modify">Modifier</string>
    <string name="logo_of_the_application">logo of the application</string>
    <string name="title_activity_load_activity">Chargement</string>
    <string name="load_activity_icon">Chargement</string>
    <string name="title_activity_post_rec_activity">Postuler/Recruter</string>
    <string name="je_post">Je Postule</string>
    <string name="je_rec">Je Recrute</string>
    <string name="inscription">Inscription</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="email">E-mail</string>
    <string name="mdp">Mot de passe</string>
    <string name="confmdp">Confirmation mot de passe</string>
    <string name="creer">Créer</string>
    <string name="connexion">Connexion</string>
    <string name="profil">Profil</string>
    <string name="formation">Formation</string>
    <string name="domaine">Domaine d\'activité</string>
    <string name="emploi">Emploi actuel</string>
    <string name="langues">Langues</string>
    <string name="competences">Compétences</string>
    <string name="geoloc">Géolocalisation</string>
    <string name="enableGeoloc">Autoriser</string>
    <string name="offre">Offre</string>
    <string name="mess">Messagerie</string>
    <string name="job">Emplois</string>
    <string name="entreprise">Entreprise</string>
    <string name="intitule_post">Intitulé du poste</string>
    <string name="type">Type</string>
    <string name="lieu">Lieu</string>
    <string name="comp_nec">Compétences neccesaires</string>
    <string name="nouv_offre">Nouvelle offre</string>
    <string name="nouv_post">Nouveau postulant</string>
    <string name="post">Postulant</string>
    <string name="tie">Félicitations vous avez un \"Tie\"</string>
    <string name="cont_rech">Continuer la recherche</string>
    <string name="envoyer_mess_post">Envoyer un message au recruteur </string>
    <string name="envoyer_mess_rec">Envoyer un message au postulant </string>
    <string name="lancer_recherche">Lancer la recherche !</string>
    <string name="seekbar">Rayon de recherche : </string>
    <string name="title_location">Entrer la ville</string>
    <string name="slogan">Quand chercher un travail devient une partie de plaisir!</string>
    <string name="title_activity_inscription_activity">Inscription</string>
    <string name="title_activity_offer_activity">Nouvelle offre</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="creer_compte">Créer un compte</string>
    <string name="title_activity_main_tabbed">Postuler</string>
    <string name="title_activity_loadscreen">Chargement</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_main_tabbed_activity_rec">Recruter</string>
    <string name="title_activity_new_offer_activity">Nouvelle offre</string>
    <string name="title_activity_tie_activity">Tie</string>
    <string name="title_activity_message_rec_activity">Message</string>
    <string name="title_activity_new_post_activity">Nouveau postulant</string>
    <string name="title_activity_view_offer_activity">Votre offre</string>
    <string name="finish_modification">Terminé !</string>
    <string name="err_msg_email">Enter valid email address</string>

    <string-array name="training_array">
        <item>Séléctionner une formation</item>
        <item>Bac professionnel</item>
        <item>Bac</item>
        <item>Bac+1</item>
        <item>Bac+2</item>
        <item>Bac+3</item>
        <item>Bac+4/5</item>
        <item>Licence</item>
        <item>CAP</item>
        <item>DUT</item>
        <item>BTS</item>
    </string-array>
    <string name="title_activity_chat_room">ChatRoomActivity</string>
    <string name="title_activity_offer_view_activity">Offer_view_activity</string>

</resources>
