
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ergasia.Inscription_activity">



    <TextView
        android:id="@+id/inscriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/inscription"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/ergasiagreen"
        android:textSize="@dimen/title_dimension"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/inscriptionTextView"
        android:id="@+id/frameLayout6">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/inscriptionTextView"
            android:layout_marginTop="25dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="383dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/nameTextView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nom"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/sub_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nameEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textStyle="italic"
                    android:textSize="@dimen/text1">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/firstnameTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prenom"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/sub_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/firstNameEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:textStyle="italic"
                    android:textSize="@dimen/text1" />

                <TextView
                    android:id="@+id/emailTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/sub_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/emailEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textStyle="italic"
                    android:textSize="@dimen/text1" />

                <TextView
                    android:id="@+id/passwordTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mdp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/sub_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/passwordEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textStyle="italic"
                    android:textSize="@dimen/text1" />

                <TextView
                    android:id="@+id/confpasswordTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confmdp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="@dimen/sub_title"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/confpasswordEditText1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:textStyle="italic"
                    android:textSize="@dimen/text1" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/frameLayout6"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/createButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ergasiagreen"
            android:text="@string/creer"
            android:textColor="@color/white"
            android:layout_below="@+id/frameLayout6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />
    </LinearLayout>

</RelativeLayout>
