<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity.Post_rec_activity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/frameLayout4">

        <com.example.ergasia.CustomFont.CustomTextView
            style="@style/textview"
            android:id="@+id/sloganTextView"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:layout_below="@+id/inscriptionTextView"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:minHeight="50sp"
            android:minWidth="50dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:text="@string/slogan"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic"
            android:layout_gravity="center"
            android:textSize="@dimen/slogan_size"/>

        <com.example.ergasia.CustomFont.CustomTextView
            style="@style/ergasiatitle"
            android:id="@+id/inscriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/ergasiagreen"
            android:textSize="@dimen/title_dimension"
            android:layout_gravity="center_horizontal|top" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/frameLayout4"
        android:weightSum="1">

        <com.example.ergasia.CustomFont.CustomButton
            style="@style/button"
            android:id="@+id/postButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:text="@string/je_post"
            android:textSize="@dimen/text_size_button"
            android:textColor="@color/white"
            android:layout_weight="0.27" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10" />

        <com.example.ergasia.CustomFont.CustomButton
            style="@style/button"
            android:id="@+id/recButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:text="@string/je_rec"
            android:textSize="@dimen/text_size_button"
            android:textColor="@color/white"
            android:layout_weight="0.27" />
    </LinearLayout>

</RelativeLayout>