<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ergasia.New_offer_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/entreprise"
                android:id="@+id/viewJobTextView"
                android:textSize="@dimen/sub_title2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewJobEditText"
                android:textSize="@dimen/text1"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/intitule_post"
                android:id="@+id/jobTitleTextView"
                android:textSize="@dimen/sub_title2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/jobTitleEditText2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/type"
                android:id="@+id/viewTypeTextView"
                android:textStyle="bold"
                android:textSize="@dimen/sub_title2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/typeRadioGroup">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CDI"
                        android:id="@+id/cdiRadioButton2"
                        android:textSize="@dimen/text1"
                        android:textStyle="italic" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="CDD"
                        android:id="@+id/cddRadioButton2"
                        android:textSize="@dimen/text1"
                        android:textStyle="italic" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Stage"
                        android:id="@+id/internRadioButton2"
                        android:textStyle="italic"
                        android:textSize="@dimen/text1" />
                </LinearLayout>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/domaine"
                android:id="@+id/viewAreaTextView"
                android:textSize="@dimen/sub_title2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewAreaEditText"
                android:textStyle="italic"
                android:textSize="@dimen/text1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lieu"
                android:id="@+id/viewLocationTextView"
                android:textStyle="bold"
                android:textSize="@dimen/sub_title2" />

            <AutoCompleteTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New AutoCompleteTextView"
                android:id="@+id/viewLocationTextEdit"
                android:textSize="@dimen/text1"
                android:textStyle="italic" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/comp_nec"
                android:id="@+id/viewSkillsTextView"
                android:textSize="@dimen/sub_title2"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/viewSkillsTextEdit"
                android:textSize="@dimen/text1"
                android:textStyle="italic" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
