<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.ergasia.Activity.OfferFragmentPost">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout"
        android:background="@color/white"
        android:clickable="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="357dp"
            android:id="@+id/scrollView2" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/entreprise"
                    android:id="@+id/companyTextView2"
                    android:textSize="@dimen/sub_title2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Google"
                    android:id="@+id/companySmallText2"
                    android:textSize="@dimen/text1"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/intitule_post"
                    android:id="@+id/jobTitleTextView2"
                    android:textStyle="bold"
                    android:textSize="@dimen/sub_title2" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="47dp"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/jobTitleSmallTextView"
                        android:textStyle="italic"
                        android:textSize="@dimen/text1"
                        android:text="Ingénieur d&apos;affaire"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/domaine"
                    android:id="@+id/areaTextView"
                    android:textSize="@dimen/sub_title2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Informatique"
                    android:id="@+id/areaSmallTextView"
                    android:textSize="@dimen/text1"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/type"
                    android:id="@+id/typeTextView"
                    android:textSize="@dimen/sub_title2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:text="CDI"
                    android:id="@+id/typeSmallTextView"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic"
                    android:textSize="@dimen/text1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/lieu"
                    android:id="@+id/jobTextView"
                    android:textSize="@dimen/sub_title2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Paris"
                    android:id="@+id/locationSmallTextView"
                    android:textStyle="italic"
                    android:textSize="@dimen/text1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/comp_nec"
                    android:id="@+id/skillsTextView"
                    android:textStyle="bold"
                    android:textSize="@dimen/sub_title2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="47dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="C++"
                    android:id="@+id/skillsSmallTextView"
                    android:textSize="@dimen/text1"
                    android:textStyle="italic" />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:weightSum="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:id="@+id/okButton"
            android:background="@drawable/icon_yes"
            android:longClickable="true"
            android:layout_weight="0.2" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:id="@+id/imageButton"
            android:background="@drawable/icon_no"
            android:longClickable="true"
            android:layout_weight="0.2" />

    </LinearLayout>

</RelativeLayout>
